# aspira-trading

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark.sh
docs/: hft_risk_engine_design.md  high_performance_trading_system.md
include/: event_pipeline.h  execution_gateway.h  feed_handler.h  journal.h  logger.h  memory_pool.h  order.h  order_book.h  rate_limiter.h  ring_buffer.h  risk_engine.h
scripts/: build_deploy.sh
src/: event_pipeline.cpp  execution_gateway.c  feed_handler.c  journal.c  logger.c  main.cpp  memory_pool.c  order_book.cpp  ring_buffer.c  risk_engine.cpp
tests/: test_memory_pool.c  test_order_book.cpp  test_ring_buffer.c  test_risk_engine.cpp
